# portfolio

./: .gitignore  app.py  ingest.py  pyproject.toml
